# ecommerce-sales-analysis

./: README.md  TODO.md  extra.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
logs/: issues.md
sql/: cleaning.sql  csv_to_sql.sql  ddl.sql  eda.sql  etl.sql
src/ecommerce_sales_analysis/: __init__.py  app.py  charts.py  config.py  data_loader.py  db.py  queries.py  utils.py
src/ecommerce_sales_analysis/db/: engine.py  models.py
